--- a/osusume_area.html
+++ b/osusume_area.html
@@ -131,7 +131,7 @@
         <h3>交通アクセス</h3>
         <p><strong>東京メトロ日比谷線・東西線 茅場町駅</strong>や<strong>都営浅草線 日本橋駅</strong>が利用でき、<strong>東京駅</strong>や<strong>銀座</strong>、<strong>新宿</strong>strong>など主要エリアへのアクセスが非常に便利です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは<strong>まいばすけっと</strong>・<strong>成城石井</strong>・<strong>マルエツプチ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
+        <p>スーパーは<strong>まいばすけっと</strong>・<strong>成城石井</strong>・<strong>肉のハナマサ</strong>など、ドラッグストアは<strong>スギドラッグ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
         <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に<strong>人形町エリア</strong>には老舗の和食店も多く、グルメも楽しめます。</p>
         <h3>自然環境</h3>
@@ -168,9 +168,9 @@
         <h3>交通アクセス</h3>
         <p><strong>都営大江戸線 新江古田駅</strong>が利用でき、<strong>新宿</strong>や<strong>六本木</strong>方面へのアクセスが便利です。また、<strong>西武池袋線 江古田駅</strong>も徒歩圏内で、<strong>池袋</strong>方面にも出やすいのが特徴です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは<strong>ライフ</strong>・<strong>オリンピック</strong>・<strong>まいばすけっと</strong>などがあり、日常の買い物には困りません。</p>
+        <p>スーパーは<strong>オーケー</strong>・<strong>サミット</strong>・<strong>マルマン</strong>など、<strong>新江古田駅周辺</strong>には<strong>ぱぱす</strong>などのドラッグストアがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
-        <p>駅周辺にはファミレスやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
+        <p><strong>新江古田駅周辺</strong>にはレストランやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
         <h3>自然環境</h3>
         <p>近隣には<strong>江古田の森公園</strong>があり、散歩やジョギングに適した緑豊かな環境が魅力です。</p>
     </div>
@@ -212,9 +212,9 @@
         <h3>交通アクセス</h3>
         <p><strong>JR埼京線 北赤羽駅</strong>が利用でき、<strong>新宿</strong>・<strong>渋谷</strong>方面へのアクセスがスムーズです。また、<strong>赤羽駅</strong>も近く、多路線が使える利便性があります。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは<strong>マルエツ</strong>・<strong>西友</strong>・<strong>ダイエー</strong>などがあり、日常の買い物には困りません。</p>
+        <p>スーパーは<strong>リコス</strong>・<strong>ミニコープ</strong>・<strong>まいばすけっと</strong>などがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
-        <p><strong>赤羽駅周辺</strong>には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
+        <p><strong>北赤羽駅周辺</strong>や<strong>赤羽駅周辺</strong>には飲食店が多く、リーズナブルな居酒屋からカフェ、ラーメン店まで幅広く揃っています。</p>
         <h3>自然環境</h3>
         <p>近隣には<strong>桐ケ丘中央公園</strong>や<strong>荒川河川敷</strong>があり、散歩やジョギングに適した環境が魅力です。</p>
     </div>
