--- a/osusume_area.html
+++ b/osusume_area.html
@@ -125,7 +125,7 @@
                 </tbody>
             </table>
         </details>
-        <p>中でも<strong>日本橋茅場町1丁目</strong>・<strong>日本橋小網町</strong>は、都心の利便性を活かしながらも、比較的手頃な家賃で住めるエリアとしておすすめです。</p>
+        <p>中でも<strong>日本橋茅場町1丁目</strong>・<strong>日本橋小網町</strong>は、都心の利便性を活かしながら住めるエリアとしておすすめです。</p>
         <h3>治安の良さ</h3>
         <p>オフィス街としての性質が強く、夜間は比較的静かで落ち着いた雰囲気があります。防犯カメラの設置も多く、治安は安定しています。</p>
         <h3>交通アクセス</h3>
