--- a/osusume_area.html
+++ b/osusume_area.html
@@ -48,6 +48,9 @@
     <h2>目次</h2>
     <ul>
         <li><a href="#setagaya">世田谷区</a></li>
+        <li><a href="#chuo">中央区</a></li>
+        <li><a href="#nakano">中野区</a></li>
+        <li><a href="#kita">北区</a></li>
     </ul>
 
     <div class="section-box">
@@ -129,7 +132,7 @@
         <h3>治安の良さ</h3>
         <p>オフィス街としての性質が強く、夜間は比較的静かで落ち着いた雰囲気があります。防犯カメラの設置も多く、治安は安定しています。</p>
         <h3>交通アクセス</h3>
-        <p><strong>東京メトロ日比谷線・東西線 茅場町駅</strong>や<strong>都営浅草線 日本橋駅</strong>が利用でき、<strong>東京駅</strong>や<strong>銀座</strong>、<strong>新宿</strong>strong>など主要エリアへのアクセスが非常に便利です。</p>
+        <p><strong>東京メトロ日比谷線・東西線 茅場町駅</strong>や<strong>都営浅草線 日本橋駅</strong>が利用でき、<strong>東京駅</strong>や<strong>銀座</strong>、<strong>新宿</strong>など主要エリアへのアクセスが非常に便利です。</p>
         <h3>買い物環境</h3>
         <p>スーパーは<strong>まいばすけっと</strong>・<strong>成城石井</strong>・<strong>肉のハナマサ</strong>など、ドラッグストアは<strong>スギドラッグ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
@@ -168,7 +171,7 @@
         <h3>交通アクセス</h3>
         <p><strong>都営大江戸線 新江古田駅</strong>が利用でき、<strong>新宿</strong>や<strong>六本木</strong>方面へのアクセスが便利です。また、<strong>西武池袋線 江古田駅</strong>も徒歩圏内で、<strong>池袋</strong>方面にも出やすいのが特徴です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは<strong>オーケー</strong>・<strong>サミット</strong>・<strong>マルマン</strong>など、<strong>新江古田駅周辺</strong>には<strong>ぱぱす</strong>などのドラッグストアがあり、日常の買い物には困りません。</p>
+        <p><strong>オーケー</strong>・<strong>サミット</strong>・<strong>マルマン</strong>などのスーパーや、<strong>新江古田駅周辺</strong>には<strong>ぱぱす</strong>などのドラッグストアがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
         <p><strong>新江古田駅周辺</strong>にはレストランやカフェ、小規模ながらも美味しい個人経営の飲食店が点在しており、落ち着いた外食環境が整っています。</p>
         <h3>自然環境</h3>
