--- a/osusume_area.html
+++ b/osusume_area.html
@@ -169,7 +169,7 @@
         <h3>治安の良さ</h3>
         <p>住宅街が広がる落ち着いたエリアで、比較的静かで暮らしやすい環境が整っています。</p>
         <h3>交通アクセス</h3>
-        <p><strong>都営大江戸線 新江古田駅</strong>が利用でき、<strong>新宿</strong>や<strong>六本木</strong>方面へのアクセスが便利です。また、<strong>西武池袋線 江古田駅</strong>も徒歩圏内で、<strong>池袋</strong>方面にも出やすいのが特徴です。</p>
+        <p><strong>都営大江戸線 新江古田駅</strong>が利用でき、<strong>新宿</strong>や<strong>六本木方面</strong>へのアクセスが便利です。また、<strong>西武池袋線 江古田駅</strong>も徒歩圏内で、<strong>池袋方面</strong>にも出やすいのが特徴です。</p>
         <h3>買い物環境</h3>
         <p><strong>オーケー</strong>・<strong>サミット</strong>・<strong>マルマン</strong>などのスーパーや、<strong>新江古田駅周辺</strong>には<strong>ぱぱす</strong>などのドラッグストアがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
@@ -213,7 +213,7 @@
         <h3>治安の良さ</h3>
         <p>住宅街が広がるエリアで、落ち着いた雰囲気が特徴です。公園も多く、ファミリー層にも人気があります。</p>
         <h3>交通アクセス</h3>
-        <p><strong>JR埼京線 北赤羽駅</strong>が利用でき、<strong>新宿</strong>・<strong>渋谷</strong>方面へのアクセスがスムーズです。また、<strong>赤羽駅</strong>も近く、多路線が使える利便性があります。</p>
+        <p><strong>JR埼京線 北赤羽駅</strong>が利用でき、<strong>新宿</strong>・<strong>渋谷方面</strong>へのアクセスがスムーズです。また、<strong>赤羽駅</strong>も近く、多路線が使える利便性があります。</p>
         <h3>買い物環境</h3>
         <p>スーパーは<strong>リコス</strong>・<strong>ミニコープ</strong>・<strong>まいばすけっと</strong>などがあり、日常の買い物には困りません。</p>
         <h3>飲食環境</h3>
