--- a/osusume_area.html
+++ b/osusume_area.html
@@ -128,13 +128,13 @@
                 </tbody>
             </table>
         </details>
-        <p>中でも<strong>日本橋茅場町1丁目</strong>・<strong>日本橋小網町</strong>は、都心の利便性を活かしながら住めるエリアとしておすすめです。</p>
+        <p>中でも<strong>日本橋小網町</strong>は、都心の利便性を活かしながら住めるエリアとしておすすめです。</p>
         <h3>治安の良さ</h3>
         <p>オフィス街としての性質が強く、夜間は比較的静かで落ち着いた雰囲気があります。防犯カメラの設置も多く、治安は安定しています。</p>
         <h3>交通アクセス</h3>
         <p><strong>東京メトロ日比谷線・東西線 茅場町駅</strong>や<strong>都営浅草線 日本橋駅</strong>が利用でき、<strong>東京駅</strong>や<strong>銀座</strong>、<strong>新宿</strong>など主要エリアへのアクセスが非常に便利です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは<strong>まいばすけっと</strong>・<strong>成城石井</strong>・<strong>肉のハナマサ</strong>など、ドラッグストアは<strong>スギドラッグ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
+        <p>スーパーは<strong>まいばすけっと</strong>・<strong>マルエツプチ</strong>など、ドラッグストアは<strong>トモズ</strong>・<strong>マツモトキヨシ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
         <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に<strong>人形町エリア</strong>には老舗の和食店も多く、グルメも楽しめます。</p>
         <h3>自然環境</h3>
