--- a/osusume_area.html
+++ b/osusume_area.html
@@ -221,6 +221,50 @@
         <h3>自然環境</h3>
         <p>近隣には<strong>桐ケ丘中央公園</strong>や<strong>荒川河川敷</strong>があり、散歩やジョギングに適した環境が魅力です。</p>
     </div>
+
+    <div class="section-box">
+        <h2 id="chiyoda">千代田区</h2>
+        <div class="highlight-box">
+            <h3>千代田区 神田駿河台・神田猿楽町</h3>
+            <p><strong>千代田区</strong>は都心の中心部に位置し、オフィス街が多いエリアで、家賃も全体的に高めですが、台地1に分類される地盤の安定した地域も存在します。</p>
+        </div>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table>
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>千代田区</td><td>神田駿河台4丁目</td><td>台地1</td><td>1</td><td>御茶ノ水 小川町 新御茶ノ水</td><td>都営新宿線 JR総武線 東京メトロ千代田線 JR中央線 東京メトロ丸ノ内線</td><td>18.2</td></tr>
+                    <tr><td>千代田区</td><td>神田猿楽町2丁目</td><td>台地1</td><td>1</td><td>御茶ノ水 神保町 水道橋</td><td>都営三田線 都営新宿線 東京メトロ半蔵門線 JR総武線 JR中央線 東京メトロ丸ノ内線</td><td>18.2</td></tr>
+                    <tr><td>千代田区</td><td>神田駿河台1丁目</td><td>台地1</td><td>1</td><td>御茶ノ水 新御茶ノ水 神保町</td><td>都営三田線 都営新宿線 東京メトロ半蔵門線 JR総武線 東京メトロ千代田線 JR中央線 東京メトロ丸ノ内線</td><td>18.4</td></tr>
+                    <tr><td>千代田区</td><td>神田駿河台2丁目</td><td>台地1</td><td>1</td><td>御茶ノ水 新御茶ノ水 神保町</td><td>都営三田線 都営新宿線 東京メトロ半蔵門線 JR総武線 東京メトロ千代田線 JR中央線 東京メトロ丸ノ内線</td><td>18.4</td></tr>
+                    <tr><td>千代田区</td><td>神田猿楽町1丁目</td><td>台地1</td><td>1</td><td>御茶ノ水 新御茶ノ水 神保町</td><td>都営三田線 都営新宿線 東京メトロ半蔵門線 JR総武線 東京メトロ千代田線 JR中央線 東京メトロ丸ノ内線</td><td>18.4</td></tr>
+                    <tr><td>千代田区</td><td>神田小川町1丁目</td><td>台地1</td><td>1</td><td>小川町 新御茶ノ水 淡路町</td><td>都営新宿線 東京メトロ千代田線 東京メトロ丸ノ内線</td><td>18.6</td></tr>
+                    <tr><td>千代田区</td><td>神田駿河台3丁目</td><td>台地1</td><td>1</td><td>小川町 新御茶ノ水 淡路町</td><td>東京メトロ千代田線 都営新宿線 東京メトロ丸ノ内線</td><td>18.6</td></tr>
+                    <tr><td>千代田区</td><td>神田錦町2丁目</td><td>台地1</td><td>1</td><td>大手町 小川町 淡路町</td><td>都営新宿線 東京メトロ半蔵門線 東京メトロ丸ノ内線</td><td>18.9</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>特に<strong>神田駿河台</strong>と<strong>神田猿楽町</strong>は、交通利便性が高く、周辺に大学や文化施設が多いエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>オフィス街に近いこともあり、昼間は人通りが多く賑やかなエリアですが、住宅街の治安は比較的良好です。学生やビジネスマンが多く、落ち着いた環境が整っています。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>御茶ノ水駅</strong>を中心に<strong>JR中央線・総武線</strong>、<strong>東京メトロ丸ノ内線・千代田線</strong>、<strong>都営新宿線・三田線</strong>など多くの路線が利用可能で、東京都内の主要エリアへのアクセスが抜群です。</p>
+        <h3>買い物環境</h3>
+        <p>近隣には<strong>マルエツプチ</strong>・<strong>成城石井</strong>・<strong>まいばすけっと</strong>などのスーパーや、<strong>マツモトキヨシ</strong>・<strong>スギドラッグ</strong>などのドラッグストアがあり、日用品の買い物にも便利です。</p>
+        <h3>飲食環境</h3>
+        <p><strong>神保町エリア</strong>に近く、カレーの名店や老舗喫茶店が点在。学生街らしいリーズナブルな飲食店も多く、食事の選択肢が豊富です。</p>
+        <h3>自然環境</h3>
+        <p>近くには<strong>ニコライ堂</strong>・<strong>湯島聖堂</strong>・<strong>御茶ノ水橋</strong>などの歴史的スポットもあり、文化的な散策を楽しむことができます。</p>
     </div>
 
 </body>
