--- a/osusume_area.html
+++ b/osusume_area.html
@@ -224,8 +224,6 @@
 
     <div class="section-box">
         <h2 id="chiyoda">千代田区</h2>
-        <div class="highlight-box">
-            <h3>千代田区 神田駿河台・神田猿楽町</h3>
             <p><strong>千代田区</strong>は都心の中心部に位置し、オフィス街が多いエリアで、家賃も全体的に高めですが、台地1に分類される地盤の安定した地域も存在します。</p>
         </div>
         <details>
@@ -266,6 +264,42 @@
         <h3>自然環境</h3>
         <p>近くには<strong>ニコライ堂</strong>・<strong>湯島聖堂</strong>・<strong>御茶ノ水橋</strong>などの歴史的スポットもあり、文化的な散策を楽しむことができます。</p>
     </div>
+
+    <div class="section-box">
+        <h2 id="taito">台東区</h2>
+        <p><strong>台東区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア一覧</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>台東区</td><td>上野桜木1丁目</td><td>台地1</td><td>1</td><td>鶯谷 日暮里</td><td>JR山手線 京成本線 JR常磐線快速 JR京浜東北線 JR上野東京ライン 日暮里・舎人ライナー</td><td>13.1</td></tr>
+                    <tr><td>台東区</td><td>池之端1丁目</td><td>台地1</td><td>1</td><td>京成上野 上野広小路 湯島</td><td>京成本線 東京メトロ銀座線 東京メトロ千代田線</td><td>16.4</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>上野桜木1丁目</strong>は、<strong>台地1</strong>に位置し、地盤が安定しているエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>閑静な住宅街が広がるエリアで、落ち着いた雰囲気が特徴です。観光エリアに近いものの、治安は比較的良好です。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>JR山手線 鶯谷駅</strong>や<strong>日暮里駅</strong>が利用でき、都内主要エリアへのアクセスが良好です。<strong>京成本線</strong>や<strong>JR上野東京ライン</strong>も利用可能で、利便性が高いです。</p>
+        <h3>買い物環境</h3>
+        <p>周辺にはスーパーやがあまりないのが難点ですが、北方面に進み線路を超えると<strong>業務スーパー</strong>・<strong>ライフ</strong>・<strong>マルエツプチ</strong>・<strong>まいばすけっと</strong>などが点在しています。また、<strong>上野方面</strong>へ出ればデパートや商業施設も充実しています。</p>
+        <h3>飲食環境</h3>
+        <p><strong>上野</strong>や<strong>谷根千エリア</strong>が近いため、多彩な飲食店が揃っています。カフェや老舗の和食店も多く、食文化を楽しめる環境です。</p>
+        <h3>自然環境</h3>
+        <p><strong>上野恩賜公園</strong>が徒歩圏内にあり、散歩やジョギングを楽しめる環境が整っています。また、<strong>東京国立博物館</strong>や<strong>動物園</strong>など文化施設も充実しています。</p>
+    <div>
 
 </body>
 </html>
