--- a/osusume_area.html
+++ b/osusume_area.html
@@ -225,7 +225,6 @@
     <div class="section-box">
         <h2 id="chiyoda">千代田区</h2>
             <p><strong>千代田区</strong>は都心の中心部に位置し、オフィス街が多いエリアで、家賃も全体的に高めですが、台地1に分類される地盤の安定した地域も存在します。</p>
-        </div>
         <details>
             <summary>おすすめエリア</summary>
             <table>
@@ -269,7 +268,7 @@
         <h2 id="taito">台東区</h2>
         <p><strong>台東区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>おすすめエリア一覧</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
