--- a/osusume_area.html
+++ b/osusume_area.html
@@ -298,7 +298,43 @@
         <p><strong>上野</strong>や<strong>谷根千エリア</strong>が近いため、多彩な飲食店が揃っています。カフェや老舗の和食店も多く、食文化を楽しめる環境です。</p>
         <h3>自然環境</h3>
         <p><strong>上野恩賜公園</strong>が徒歩圏内にあり、散歩やジョギングを楽しめる環境が整っています。また、<strong>東京国立博物館</strong>や<strong>動物園</strong>など文化施設も充実しています。</p>
-    <div>
+    </div>
+
+    <div class="section-box">
+        <h2 id="shinagawa">品川区</h2>
+        <p><strong>品川区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア一覧</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>品川区</td><td>東大井4丁目</td><td>台地1</td><td>1</td><td>青物横丁 鮫洲 大井町</td><td>東京りんかい線 京浜急行本線 JR京浜東北線 東急大井町線</td><td>14.9</td></tr>
+                    <tr><td>品川区</td><td>西五反田7丁目</td><td>台地1</td><td>1</td><td>大崎広小路 五反田 不動前</td><td>東急池上線 JR山手線 東急目黒線</td><td>17.3</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>東大井4丁目</strong>は、<strong>地盤が安定</strong>しており、複数路線が利用できる便利なエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>住宅街が広がる落ち着いたエリアで、ファミリー層にも人気があります。主要駅にも近く、防犯対策も整っています。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>青物横丁駅</strong>、<strong>鮫洲駅</strong>、<strong>大井町駅</strong>が利用でき、<strong>京浜東北線</strong>・<strong>京急線</strong>・<strong>りんかい線</strong>など多路線の利用が可能です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>西友</strong>・<strong>まいばすけっと</strong>などのスーパーや商店街が充実しており、生活に必要な買い物には困りません。<strong>大井町駅周辺</strong>には<strong>アトレ大井町</strong>などの大型商業施設もあります。</p>
+        <h3>飲食環境</h3>
+        <p>周辺には飲食店が点在し、和食やカフェ、ラーメン店など多様な選択肢があります。<strong>青物横丁</strong>や<strong>大井町周辺</strong>はグルメスポットも豊富です。</p>
+        <h3>自然環境</h3>
+        <p>近隣には<strong>大井公園</strong>などの公園や緑地が点在し、散歩やジョギングに適した環境です。海岸エリアにも比較的近く、開放感のある住環境が魅力です。</p>
+    </div>
 
 </body>
 </html>
