--- a/osusume_area.html
+++ b/osusume_area.html
@@ -336,5 +336,47 @@
         <p>近隣には<strong>大井公園</strong>などの公園や緑地が点在し、散歩やジョギングに適した環境です。海岸エリアにも比較的近く、開放感のある住環境が魅力です。</p>
     </div>
 
+    <div class="section-box">
+        <h2 id="sumida">墨田区</h2>
+        <p><strong>墨田区</strong>は台地の地盤がないですが、その中でも比較的危険度が低く、家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>墨田区</td><td>堤通2丁目</td><td>沖積低地4</td><td>1</td><td>鐘ヶ淵</td><td>東武伊勢崎線</td><td>12.2</td></tr>
+                    <tr><td>墨田区</td><td>江東橋3丁目</td><td>沖積低地4</td><td>1</td><td>住吉 錦糸町</td><td>JR総武線快速 JR総武線 都営新宿線 東京メトロ半蔵門線</td><td>13.4</td></tr>
+                    <tr><td>墨田区</td><td>江東橋4丁目</td><td>沖積低地4</td><td>1</td><td>住吉 錦糸町</td><td>JR総武線快速 JR総武線 都営新宿線 東京メトロ半蔵門線</td><td>13.4</td></tr>
+                    <tr><td>墨田区</td><td>錦糸1丁目</td><td>沖積低地4</td><td>1</td><td>錦糸町</td><td>JR総武線快速 JR総武線 東京メトロ半蔵門線</td><td>14.2</td></tr>
+                    <tr><td>墨田区</td><td>錦糸4丁目</td><td>沖積低地4</td><td>1</td><td>錦糸町</td><td>JR総武線快速 JR総武線 東京メトロ半蔵門線</td><td>14.2</td></tr>
+                    <tr><td>墨田区</td><td>横網2丁目</td><td>沖積低地3</td><td>1</td><td>両国 蔵前</td><td>JR総武線 都営浅草線 都営大江戸線</td><td>15.1</td></tr>
+                    <tr><td>墨田区</td><td>横網1丁目</td><td>沖積低地4</td><td>1</td><td>浅草橋 両国 蔵前</td><td>JR総武線 都営浅草線 都営大江戸線</td><td>15.6</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>江東橋3丁目</strong>と<strong>江東橋4丁目</strong>は、<strong>錦糸町駅</strong>と<strong>住吉駅</strong>が利用でき、利便性の高いエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>駅周辺は商業施設が多く、人通りが多いため夜でも比較的安心感があります。一方で、繁華街も近いため住む場所を選ぶことが重要です。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>JR総武線 錦糸町駅</strong>と<strong>東京メトロ半蔵門線 住吉駅</strong>が利用でき、<strong>東京駅</strong>や<strong>新宿駅</strong>へのアクセスが良好です。<strong>都営新宿線</strong>を利用すれば、<strong>新宿方面</strong>への移動もスムーズです。</p>
+        <h3>買い物環境</h3>
+        <p><strong>西友</strong>・<strong>まいばすけっと</strong>などのスーパーや、<strong>オリナス錦糸町</strong>・<strong>錦糸町マルイ</strong>・<strong>アルカキット錦糸町</strong>などの大型商業施設が揃っており、買い物に非常に便利なエリアです。</p>
+        <h3>飲食環境</h3>
+        <p><strong>錦糸町駅周辺</strong>には多数の飲食店があり、ファミリーレストランから居酒屋、ラーメン店まで幅広く揃っています。また、<strong>住吉駅周辺</strong>には落ち着いた雰囲気のカフェも点在しています。</p>
+        <h3>自然環境</h3>
+        <p><strong>錦糸公園</strong>・<strong>猿江恩賜公園</strong>などが近く、散歩やジョギングに適した環境です。</p>
+    </div>
+
+
 </body>
 </html>
