--- a/osusume_area.html
+++ b/osusume_area.html
@@ -51,6 +51,11 @@
         <li><a href="#chuo">中央区</a></li>
         <li><a href="#nakano">中野区</a></li>
         <li><a href="#kita">北区</a></li>
+        <li><a href="#chiyoda">千代田区</a></li>
+        <li><a href="#shinagawa">品川区</a></li>
+        <li><a href="#taito">台東区</a></li>
+        <li><a href="#sumida">墨田区</a></li>
+        <li><a href="#ota">大田区</a></li>
     </ul>
 
     <div class="section-box">
@@ -224,7 +229,7 @@
 
     <div class="section-box">
         <h2 id="chiyoda">千代田区</h2>
-            <p><strong>千代田区</strong>は都心の中心部に位置し、オフィス街が多いエリアで、家賃も全体的に高めですが、台地1に分類される地盤の安定した地域も存在します。</p>
+            <p><strong>千代田区</strong>は都心の中心部に位置し、オフィス街が多いエリアで、家賃も全体的に高めですが、台地に分類される地盤の安定した地域も存在します。</p>
         <details>
             <summary>おすすめエリア</summary>
             <table>
@@ -287,7 +292,7 @@
                 </tbody>
             </table>
         </details>
-        <p>中でも<strong>上野桜木1丁目</strong>は、<strong>台地1</strong>に位置し、地盤が安定しているエリアです。</p>
+        <p>中でも<strong>上野桜木1丁目</strong>は地盤が安定しているエリアです。</p>
         <h3>治安の良さ</h3>
         <p>閑静な住宅街が広がるエリアで、落ち着いた雰囲気が特徴です。観光エリアに近いものの、治安は比較的良好です。</p>
         <h3>交通アクセス</h3>
@@ -368,7 +373,7 @@
         <h3>治安の良さ</h3>
         <p>駅周辺は商業施設が多く、人通りが多いため夜でも比較的安心感があります。一方で、繁華街も近いため住む場所を選ぶことが重要です。</p>
         <h3>交通アクセス</h3>
-        <p><strong>JR総武線 錦糸町駅</strong>と<strong>東京メトロ半蔵門線 住吉駅</strong>が利用でき、<strong>東京駅</strong>や<strong>新宿駅</strong>へのアクセスが良好です。<strong>都営新宿線</strong>を利用すれば、<strong>新宿方面</strong>への移動もスムーズです。</p>
+        <p><strong>JR総武線 錦糸町駅</strong>と<strong>東京メトロ半蔵門線</strong>・<strong>都営新宿線 住吉駅</strong>が利用でき、<strong>東京駅</strong>や<strong>新宿駅</strong>へのアクセスが良好です。<strong>都営新宿線</strong>を利用すれば、<strong>新宿方面</strong>への移動もスムーズです。</p>
         <h3>買い物環境</h3>
         <p><strong>西友</strong>・<strong>まいばすけっと</strong>などのスーパーや、<strong>オリナス錦糸町</strong>・<strong>錦糸町マルイ</strong>・<strong>アルカキット錦糸町</strong>などの大型商業施設が揃っており、買い物に非常に便利なエリアです。</p>
         <h3>飲食環境</h3>
@@ -377,6 +382,42 @@
         <p><strong>錦糸公園</strong>・<strong>猿江恩賜公園</strong>などが近く、散歩やジョギングに適した環境です。</p>
     </div>
 
+    <div class="section-box">
+        <h2 id="ota">大田区</h2>
+        <p><strong>大田区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア一覧</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>大田区</td><td>田園調布3丁目</td><td>台地1</td><td>1</td><td>多摩川 田園調布</td><td>東急多摩川線 東急目黒線 東急東横線</td><td>12.9</td></tr>
+                    <tr><td>大田区</td><td>田園調布4丁目</td><td>台地1</td><td>1</td><td>多摩川 田園調布</td><td>東急多摩川線 東急目黒線 東急東横線</td><td>12.9</td></tr>
+                    <tr><td>大田区</td><td>南千束2丁目</td><td>台地2</td><td>1</td><td>大岡山 北千束 洗足池</td><td>東急池上線 東急目黒線 東急大井町線</td><td>13.5</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>南千束2丁目</strong>は、<strong>大岡山駅</strong>・<strong>北千束駅</strong>・<strong>洗足池駅</strong>が利用でき、交通アクセスの良いエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p>閑静な住宅街が広がっており、治安の良いエリアとして知られています。ファミリー層が多く、落ち着いた環境が魅力です。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>東急目黒線 大岡山駅</strong>、<strong>東急池上線 北千束駅</strong>、<strong>東急大井町線 洗足池駅</strong>が利用でき、都心へのアクセスも良好です。</p>
+        <h3>買い物環境</h3>
+        <p>駅周辺には<strong>東急ストア</strong>や<strong>まいばすけっと</strong>があり、日常の買い物には困りません。また、隣接する<strong>大岡山エリア</strong>には商店街もあります。</p>
+        <h3>飲食環境</h3>
+        <p><strong>大岡山駅周辺</strong>には飲食店が充実しており、カフェやレストラン、リーズナブルな定食屋も多く揃っています。</p>
+        <h3>自然環境</h3>
+        <p><strong>洗足池公園</strong>が近く、散歩やジョギング、ボート遊びを楽しむことができます。また、公園内には桜の名所もあり、四季折々の風景を楽しめます。</p>
+    </div>
 
 </body>
 </html>
