--- a/osusume_area.html
+++ b/osusume_area.html
@@ -52,10 +52,11 @@
         <li><a href="#nakano">中野区</a></li>
         <li><a href="#kita">北区</a></li>
         <li><a href="#chiyoda">千代田区</a></li>
-        <li><a href="#shinagawa">品川区</a></li>
         <li><a href="#taito">台東区</a></li>
+        <li><a href="#shinagawa">品川区</a></li>
         <li><a href="#sumida">墨田区</a></li>
         <li><a href="#ota">大田区</a></li>
+        <li><a href="#bunkyo">文京区</a></li>
     </ul>
 
     <div class="section-box">
@@ -412,12 +413,57 @@
         <h3>交通アクセス</h3>
         <p><strong>東急目黒線 大岡山駅</strong>、<strong>東急池上線 北千束駅</strong>、<strong>東急大井町線 洗足池駅</strong>が利用でき、都心へのアクセスも良好です。</p>
         <h3>買い物環境</h3>
-        <p>駅周辺には<strong>東急ストア</strong>や<strong>まいばすけっと</strong>があり、日常の買い物には困りません。また、隣接する<strong>大岡山エリア</strong>には商店街もあります。</p>
+        <p>駅周辺には<strong>東急ストア</strong>・<strong>まいばすけっと</strong>があり、日常の買い物には困りません。また、隣接する<strong>大岡山エリア</strong>には商店街もあります。</p>
         <h3>飲食環境</h3>
         <p><strong>大岡山駅周辺</strong>には飲食店が充実しており、カフェやレストラン、リーズナブルな定食屋も多く揃っています。</p>
         <h3>自然環境</h3>
         <p><strong>洗足池公園</strong>が近く、散歩やジョギング、ボート遊びを楽しむことができます。また、公園内には桜の名所もあり、四季折々の風景を楽しめます。</p>
     </div>
+
+    <div class="section-box">
+        <h2 id="bunkyo">文京区</h2>
+        <p><strong>文京区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア一覧</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>文京区</td><td>本駒込6丁目</td><td>台地1</td><td>1</td><td>駒込 巣鴨 千石</td><td>都営三田線 JR山手線 東京メトロ南北線</td><td>13.8</td></tr>
+                    <tr><td>文京区</td><td>大塚2丁目</td><td>台地1</td><td>1</td><td>茗荷谷 新大塚 護国寺</td><td>東京メトロ有楽町線 東京メトロ丸ノ内線</td><td>14.6</td></tr>
+                    <tr><td>文京区</td><td>大塚3丁目</td><td>台地1</td><td>1</td><td>茗荷谷 新大塚</td><td>東京メトロ丸ノ内線</td><td>14.6</td></tr>
+                    <tr><td>文京区</td><td>大塚1丁目</td><td>台地1</td><td>1</td><td>茗荷谷 護国寺</td><td>東京メトロ有楽町線 東京メトロ丸ノ内線</td><td>14.9</td></tr>
+                    <tr><td>文京区</td><td>春日2丁目</td><td>台地1</td><td>1</td><td>茗荷谷（徒歩10分圏外）</td><td>東京メトロ丸ノ内線</td><td>15.0</td></tr>
+                    <tr><td>文京区</td><td>小石川4丁目</td><td>台地1</td><td>1</td><td>茗荷谷</td><td>東京メトロ丸ノ内線</td><td>15.0</td></tr>
+                    <tr><td>文京区</td><td>弥生1丁目</td><td>台地1</td><td>1</td><td>東大前 根津</td><td>東京メトロ千代田線 東京メトロ南北線</td><td>15.0</td></tr>
+                    <tr><td>文京区</td><td>関口2丁目</td><td>台地1</td><td>1</td><td>早稲田 江戸川橋 護国寺</td><td>東京メトロ有楽町線 都電荒川線</td><td>15.1</td></tr>
+                    <tr><td>文京区</td><td>関口3丁目</td><td>台地1</td><td>1</td><td>江戸川橋 護国寺</td><td>東京メトロ有楽町線</td><td>15.3</td></tr>
+                    <tr><td>文京区</td><td>本郷7丁目</td><td>台地1</td><td>1</td><td>湯島 根津 本郷三丁目</td><td>東京メトロ丸ノ内線 東京メトロ千代田線 都営大江戸線</td><td>16.4</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>本駒込6丁目</strong>は、<strong>駒込駅</strong>・<strong>巣鴨駅</strong>・<strong>千石駅</strong>が利用でき、交通アクセスの良いエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>文京区</strong>の中でも住宅街が広がる落ち着いたエリアで、治安の良い地域として知られています。学生やファミリー層にも人気があります。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>JR山手線 駒込駅</strong>、<strong>都営三田線 千石駅</strong>、<strong>東京メトロ南北線 駒込駅</strong>が利用でき、都心へのアクセスも良好です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>サミット</strong>・<strong>ピーコック</strong>などのスーパーや、<strong>サンドラッグ</strong>・<strong>ユニバーサルドラッグ</strong>・<strong>ウエルシア</strong>などのドラッグストアが点在し、日常の買い物には困りません。また、近隣の<strong>巣鴨エリア</strong>には商店街もあり、多様な買い物が楽しめます。</p>
+        <h3>飲食環境</h3>
+        <p>駅周辺には飲食店が揃っており、カフェやレストラン、昔ながらの定食屋もあります。特に<strong>駒込エリア</strong>には和食店が充実しています。</p>
+        <h3>自然環境</h3>
+        <p>近隣には<strong>六義園</strong>や<strong>旧古河庭園</strong>があり、四季折々の自然を楽しむことができます。散歩やリフレッシュにも最適な環境です。</p>
+    </div>
+
 
 </body>
 </html>
