--- a/osusume_area.html
+++ b/osusume_area.html
@@ -57,6 +57,7 @@
         <li><a href="#sumida">墨田区</a></li>
         <li><a href="#ota">大田区</a></li>
         <li><a href="#bunkyo">文京区</a></li>
+        <li><a href="#shinjuku">新宿区</a></li>
     </ul>
 
     <div class="section-box">
@@ -387,7 +388,7 @@
         <h2 id="ota">大田区</h2>
         <p><strong>大田区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>おすすめエリア一覧</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -424,7 +425,7 @@
         <h2 id="bunkyo">文京区</h2>
         <p><strong>文京区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>おすすめエリア一覧</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -463,6 +464,49 @@
         <h3>自然環境</h3>
         <p>近隣には<strong>六義園</strong>や<strong>旧古河庭園</strong>があり、四季折々の自然を楽しむことができます。散歩やリフレッシュにも最適な環境です。</p>
     </div>
+
+    <div class="section-box">
+        <h2 id="shinjuku">新宿区</h2>
+        <p><strong>新宿区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>新宿区</td><td>下落合2丁目</td><td>台地1</td><td>1</td><td>高田馬場 目白 下落合</td><td>東京メトロ東西線 JR山手線 西武新宿線</td><td>14.4</td></tr>
+                    <tr><td>新宿区</td><td>百人町4丁目</td><td>台地1</td><td>1</td><td>高田馬場</td><td>JR山手線 西武新宿線</td><td>14.5</td></tr>
+                    <tr><td>新宿区</td><td>西早稲田1丁目</td><td>台地1</td><td>1</td><td>面影橋 早稲田</td><td>東京メトロ東西線 都電荒川線</td><td>14.6</td></tr>
+                    <tr><td>新宿区</td><td>戸山3丁目</td><td>台地1</td><td>1</td><td>面影橋 西早稲田</td><td>都電荒川線 東京メトロ副都心線</td><td>14.6</td></tr>
+                    <tr><td>新宿区</td><td>大久保3丁目</td><td>台地1</td><td>1</td><td>高田馬場 西早稲田 新大久保</td><td>東京メトロ東西線 JR山手線 西武新宿線 東京メトロ副都心線</td><td>14.8</td></tr>
+                    <tr><td>新宿区</td><td>西新宿6丁目</td><td>台地1</td><td>1</td><td>西新宿五丁目 西新宿 都庁前</td><td>都営大江戸線 東京メトロ丸ノ内線</td><td>16.9</td></tr>
+                    <tr><td>新宿区</td><td>歌舞伎町2丁目</td><td>台地1</td><td>1</td><td>新宿 西武新宿 東新宿</td><td>東京メトロ丸ノ内線 東京メトロ副都心線 西武新宿線 都営大江戸線</td><td>18.1</td></tr>
+                    <tr><td>新宿区</td><td>西新宿7丁目</td><td>台地1</td><td>1</td><td>西新宿 新宿西口 西武新宿</td><td>東京メトロ丸ノ内線 西武新宿線 都営大江戸線</td><td>18.4</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>下落合2丁目</strong>は、<strong>高田馬場駅</strong>・<strong>目白駅</strong>・<strong>下落合駅</strong>が利用でき、利便性の高いエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p>住宅街が広がるエリアで、治安が良好です。繁華街から距離があり、落ち着いた雰囲気のためファミリー層や学生にも人気があります。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>JR山手線 目白駅・高田馬場駅</strong>、<strong>西武新宿線 下落合駅</strong>、<strong>東京メトロ東西線 高田馬場駅</strong>が利用でき、都心へのアクセスがスムーズです。</p>
+        <h3>買い物環境</h3>
+        <p><strong>高田馬場エリア</strong>には<strong>オーケー</strong>・<strong>ワイズマート</strong>など、スーパーが充実しており、日常の買い物には困りません。<strong>目白駅周辺</strong>にはおしゃれなカフェや雑貨店もあります。</p>
+        <h3>飲食環境</h3>
+        <p><strong>高田馬場エリア</strong>にはリーズナブルな飲食店が多く、学生や社会人に人気があります。<strong>目白駅周辺</strong>には落ち着いたカフェやレストランが揃い、食事の選択肢が豊富です。</p>
+        <h3>自然環境</h3>
+        <p>近隣には<strong>おとめ山公園</strong>があり、自然を感じながら散策を楽しめます。</p>
+    </div>
+
 
 
 </body>
