--- a/osusume_area.html
+++ b/osusume_area.html
@@ -58,6 +58,7 @@
         <li><a href="#ota">大田区</a></li>
         <li><a href="#bunkyo">文京区</a></li>
         <li><a href="#shinjuku">新宿区</a></li>
+        <li><a href="#suginami">杉並区</a></li>
     </ul>
 
     <div class="section-box">
@@ -506,6 +507,43 @@
         <h3>自然環境</h3>
         <p>近隣には<strong>おとめ山公園</strong>があり、自然を感じながら散策を楽しめます。</p>
     </div>
+
+    <div class="section-box">
+        <h2 id="suginami">杉並区</h2>
+        <p><strong>杉並区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア一覧</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>杉並区</td><td>井草3丁目</td><td>台地1</td><td>1</td><td>井荻</td><td>西武新宿線</td><td>10.6</td></tr>
+                    <tr><td>杉並区</td><td>井草4丁目</td><td>台地1</td><td>1</td><td>井荻 上井草</td><td>西武新宿線</td><td>10.7</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>井草3丁目</strong>・<strong>井草4丁目</strong>は、<strong>井荻駅</strong>と<strong>上井草駅</strong>が利用でき、落ち着いた住環境が魅力のエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>井草エリア</strong>は住宅街が広がり、治安が良好です。ファミリー層が多く、落ち着いた雰囲気の中で暮らすことができます。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>西武新宿線 井荻駅</strong>・<strong>上井草駅</strong>が利用でき、<strong>新宿駅</strong>へのアクセスも便利です。通勤や通学にも適したエリアです。</p>
+        <h3>買い物環境</h3>
+        <p><strong>サミット</strong>・<strong>コープみらい</strong>などのスーパーや、<strong>ココカラファイン</strong>・<strong>ウエルシア</strong>などのドラッグストアが点在しており、日常の買い物には困りません。さらに、少し足を伸ばせば<strong>荻窪エリア</strong>にもアクセスできます。</p>
+        <h3>飲食環境</h3>
+        <p><strong>井草エリア</strong>は静かな住宅街のため、飲食店は少なめですが、<strong>井荻駅周辺</strong>にはカフェやローカルな飲食店が点在しています。</p>
+        <h3>自然環境</h3>
+        <p><strong>井草森公園</strong>や、少し遠いですが<strong>善福寺公園</strong>があり、散歩やジョギング、家族でのレジャーに適した環境が整っています。</p>
+    </div>
+    
 
 
 
