--- a/osusume_area.html
+++ b/osusume_area.html
@@ -59,6 +59,7 @@
         <li><a href="#bunkyo">文京区</a></li>
         <li><a href="#shinjuku">新宿区</a></li>
         <li><a href="#suginami">杉並区</a></li>
+        <li><a href="#itabashi">板橋区</a></li>
     </ul>
 
     <div class="section-box">
@@ -512,7 +513,7 @@
         <h2 id="suginami">杉並区</h2>
         <p><strong>杉並区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
         <details>
-            <summary>おすすめエリア一覧</summary>
+            <summary>おすすめエリア</summary>
             <table border="1">
                 <thead>
                     <tr>
@@ -543,8 +544,50 @@
         <h3>自然環境</h3>
         <p><strong>井草森公園</strong>や、少し遠いですが<strong>善福寺公園</strong>があり、散歩やジョギング、家族でのレジャーに適した環境が整っています。</p>
     </div>
-    
 
+    <div class="section-box">
+        <h2 id="itabashi">板橋区</h2>
+        <p><strong>板橋区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>板橋区</td><td>徳丸7丁目</td><td>台地1</td><td>1</td><td>高島平（徒歩10分圏外）</td><td>都営三田線</td><td>8.5</td></tr>
+                    <tr><td>板橋区</td><td>徳丸8丁目</td><td>台地1</td><td>1</td><td>高島平（徒歩10分圏外）</td><td>都営三田線</td><td>8.5</td></tr>
+                    <tr><td>板橋区</td><td>四葉2丁目</td><td>台地1</td><td>1</td><td>新高島平（徒歩10分圏外）</td><td>都営三田線</td><td>8.6</td></tr>
+                    <tr><td>板橋区</td><td>赤塚8丁目</td><td>台地1</td><td>1</td><td>西高島平（徒歩10分圏外）</td><td>都営三田線</td><td>8.9</td></tr>
+                    <tr><td>板橋区</td><td>中台3丁目</td><td>台地1</td><td>1</td><td>志村三丁目（徒歩10分圏外）</td><td>都営三田線</td><td>9.5</td></tr>
+                    <tr><td>板橋区</td><td>徳丸5丁目</td><td>台地1</td><td>1</td><td>東武練馬（徒歩10分圏外）</td><td>東武東上本線</td><td>9.9</td></tr>
+                    <tr><td>板橋区</td><td>西台4丁目</td><td>台地1</td><td>1</td><td>東武練馬</td><td>東武東上本線</td><td>9.9</td></tr>
+                    <tr><td>板橋区</td><td>小豆沢1丁目</td><td>台地1</td><td>1</td><td>志村坂上 本蓮沼</td><td>都営三田線</td><td>10.2</td></tr>
+                    <tr><td>板橋区</td><td>小茂根1丁目</td><td>台地1</td><td>1</td><td>小竹向原</td><td>東京メトロ有楽町線 東京メトロ副都心線 西武有楽町線</td><td>11.0</td></tr>
+                    <tr><td>板橋区</td><td>小茂根3丁目</td><td>台地1</td><td>1</td><td>小竹向原</td><td>東京メトロ有楽町線 東京メトロ副都心線 西武有楽町線</td><td>11.0</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>小豆沢1丁目</strong>は、<strong>志村坂上駅</strong>と<strong>本蓮沼駅</strong>が利用でき、生活利便性が高いエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>小豆沢エリア</strong>は住宅街が広がり、落ち着いた環境が魅力です。地域の治安も良好で、ファミリー層やシニア層にも人気があります。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>都営三田線 志村坂上駅</strong>・<strong>本蓮沼駅</strong>が利用でき、<strong>大手町</strong>などの都心方面へのアクセスがスムーズです。</p>
+        <h3>買い物環境</h3>
+        <p>近隣には<strong>まいばすけっと</strong>・<strong>東武ストア</strong>などのスーパーや、<strong>クリエイトS・D</strong>・<strong>ぱぱす</strong>などのドラッグストアがあり、日常の買い物に便利です。また、少し足を伸ばせば<strong>板橋本町</strong>や<strong>赤羽方面</strong>の商業施設も利用可能です。</p>
+        <h3>飲食環境</h3>
+        <p>住宅街のため飲食店の数は限られていますが、<strong>志村坂上駅周辺</strong>にはカフェや定食屋などがあり、落ち着いた食事が楽しめます。</p>
+        <h3>自然環境</h3>
+        <p><strong>小豆沢公園</strong>が近くにあり、散歩やジョギング、スポーツを楽しむのに最適な環境が整っています。</p>
+    </div>
 
 
 </body>
