--- a/osusume_area.html
+++ b/osusume_area.html
@@ -60,6 +60,7 @@
         <li><a href="#shinjuku">新宿区</a></li>
         <li><a href="#suginami">杉並区</a></li>
         <li><a href="#itabashi">板橋区</a></li>
+        <li><a href="#edogawa">江戸川区</a></li>
     </ul>
 
     <div class="section-box">
@@ -589,6 +590,44 @@
         <p><strong>小豆沢公園</strong>が近くにあり、散歩やジョギング、スポーツを楽しむのに最適な環境が整っています。</p>
     </div>
 
+    <div class="section-box">
+        <h2 id="edogawa">江戸川区</h2>
+        <p><strong>江戸川区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>江戸川区</td><td>春江町1丁目</td><td>沖積低地2</td><td>1</td><td>篠崎（徒歩10分圏外）</td><td>都営新宿線</td><td>8.7</td></tr>
+                    <tr><td>江戸川区</td><td>南葛西7丁目</td><td>沖積低地4</td><td>1</td><td>舞浜（徒歩10分圏外）</td><td>JR京葉線</td><td>9.0</td></tr>
+                    <tr><td>江戸川区</td><td>東葛西9丁目</td><td>沖積低地4</td><td>1</td><td>葛西（徒歩10分圏外）</td><td>東京メトロ東西線</td><td>9.0</td></tr>
+                    <tr><td>江戸川区</td><td>清新町1丁目</td><td>沖積低地4</td><td>1</td><td>西葛西</td><td>東京メトロ東西線</td><td>9.0</td></tr>
+                    <tr><td>江戸川区</td><td>西葛西5丁目</td><td>沖積低地4</td><td>1</td><td>西葛西</td><td>東京メトロ東西線</td><td>9.0</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>西葛西5丁目</strong>は、<strong>西葛西駅</strong>が利用でき、交通アクセスと住環境のバランスが取れたエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>比較的落ち着いた住宅街でありながら、駅周辺は明るく人通りも多いため、防犯面でも安心できるエリアです。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>東京メトロ東西線 西葛西駅</strong>が利用でき、<strong>大手町</strong>や<strong>日本橋</strong>などの都心方面へのアクセスが良好です。</p>
+        <h3>買い物環境</h3>
+        <p>駅周辺には<strong>まいばすけっと</strong>・<strong>ワイズマート</strong>・<strong>オリンピック</strong>・<strong>マルエイ</strong>などのスーパーや、<strong>ウエルシア</strong>・<strong>サンドラッグ</strong>などのドラッグストア、<strong>イオン</strong>といったショッピングモールが充実しており、日常の買い物には困りません。</p>
+        <h3>飲食環境</h3>
+        <p>ファミレスやカフェ、ローカルな飲食店も多く、気軽に外食を楽しめる環境が整っています。</p>
+        <h3>自然環境</h3>
+        <p><strong>行船公園</strong>が近くにあり、自然を感じながらリラックスできるスポットとして人気があります。</p>
+    </div>
 
 </body>
 </html>
