--- a/osusume_area.html
+++ b/osusume_area.html
@@ -592,7 +592,7 @@
 
     <div class="section-box">
         <h2 id="edogawa">江戸川区</h2>
-        <p><strong>江戸川区</strong>の中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <p><strong>江戸川区</strong>は台地の地盤がないですが、その中でも比較的危険度が低く、家賃が安めのエリアをピックアップしました。</p>
         <details>
             <summary>おすすめエリア</summary>
             <table border="1">
