--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>東京23区 住所ごとの地震への強さ表</title>
+    <title>【東京23区】地震に強い住所表</title>
     <!-- DataTablesのスタイルシートを追加 -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.3/css/select.dataTables.min.css">
@@ -15,11 +15,12 @@
     <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
 </head>
 <body>
-    <h1>東京23区 住所ごとの地震への強さ表</h1>
+    <h1>【東京23区】地震に強い住所表</h1>
     <nav>
         <ul class="menu">
-            <li><a href="index.html">表</a></li>
-            <li><a href="osusume_area.html">おすすめエリア</a></li>
+            <li><a href="index.html">危険度表</a></li>
+            <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+            <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
     </nav>
     <ul>
