--- a/otoiawase.html
+++ b/otoiawase.html
@@ -44,11 +44,28 @@
             background-color: #45a049;
         }
     </style>
+    <script>
+        function handleSubmit(event) {
+            event.preventDefault(); // デフォルトのフォーム送信をキャンセル
+            const form = event.target;
+            
+            fetch(form.action, {
+                method: form.method,
+                body: new FormData(form)
+            }).then(response => {
+                // フォーム送信成功時の処理
+                window.location.href = "thank_you.html"; // リダイレクト
+            }).catch(error => {
+                console.error("送信エラー:", error);
+                alert("送信に失敗しました。もう一度お試しください。");
+            });
+        }
+    </script>
 </head>
 <body>
     <h1>お問い合わせフォーム</h1>
     <div class="form-container">
-        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe1VkbeU6vkeJfvtrYBzYkwyKIAhEJQcdN03XMfUgXhL5r6Uw/formResponse" method="POST" target="_blank">
+        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSe1VkbeU6vkeJfvtrYBzYkwyKIAhEJQcdN03XMfUgXhL5r6Uw/formResponse" method="POST" onsubmit="handleSubmit(event)">
             <label for="email">メールアドレス</label>
             <input type="email" name="entry.704328589" id="email" required>
 
