--- a/osusume_area.html
+++ b/osusume_area.html
@@ -39,8 +39,9 @@
 
     <nav>
         <ul class="menu">
-            <li><a href="index.html">表</a></li>
-            <li><a href="osusume_area.html">おすすめエリア</a></li>
+            <li><a href="index.html">危険度表</a></li>
+            <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+            <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
     </nav>
 
