--- a/otoiawase.html
+++ b/otoiawase.html
@@ -4,60 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お問い合わせフォーム</title>
+    <link rel="stylesheet" href="osusume_area.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .form-container {
-            max-width: 600px;
-            margin: auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
         iframe {
             width: 100%;
-            height: 500px;
+            height: 600px;
             border: none;
+            border-radius: 8px;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .thank-you-message {
-            display: none; /* 初期状態は非表示 */
-            background: #e8f5e9;
-            border: 1px solid #4CAF50;
+        .form-wrapper {
+            max-width: 800px;
+            margin: auto;
+            background-color: #e7f3e7;
             padding: 20px;
+            border: 2px solid #2c5f2d;
             border-radius: 8px;
-            margin-top: 20px;
+            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .form-header {
+            color: #2c5f2d;
+            text-align: left;
+            margin-bottom: 10px;
+            border-bottom: 2px solid #2c5f2d;
+            padding-bottom: 5px;
         }
     </style>
-    <script>
-        function showThankYouMessage() {
-            // iframeのフォーム送信完了後に呼び出す
-            document.getElementById("form-container").style.display = "none";
-            document.querySelector(".thank-you-message").style.display = "block";
-        }
-    </script>
 </head>
 <body>
-    <h1>お問い合わせフォーム</h1>
-    <div id="form-container" class="form-container">
+    <div class="form-wrapper">
+        <h1 class="form-header">お問い合わせフォーム</h1>
         <iframe 
-            src="https://docs.google.com/forms/d/e/1FAIpQLSe1VkbeU6vkeJfvtrYBzYkwyKIAhEJQcdN03XMfUgXhL5r6Uw/viewform?embedded=true" 
-            onload="this.onload=null; this.onreadystatechange=function() { if (this.readyState === 'complete') showThankYouMessage(); }">
+            src="https://docs.google.com/forms/d/e/1FAIpQLSe1VkbeU6vkeJfvtrYBzYkwyKIAhEJQcdN03XMfUgXhL5r6Uw/viewform?embedded=true">
         </iframe>
-    </div>
-
-    <div class="thank-you-message">
-        <h2>送信ありがとうございます！</h2>
-        <p>内容を受け付けました。後ほどご連絡いたします。</p>
-        <p><a href="index.html">トップページに戻る</a></p>
     </div>
 </body>
 </html>
