--- a/otoiawase.html
+++ b/otoiawase.html
@@ -36,6 +36,13 @@
 <body>
     <div class="form-wrapper">
         <h1 class="form-header">お問い合わせフォーム</h1>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">危険度表</a></li>
+                <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+                <li><a href="otoiawase.html">お問合せ</a></li>
+            </ul>
+        </nav>
         <iframe 
             src="https://docs.google.com/forms/d/e/1FAIpQLSe1VkbeU6vkeJfvtrYBzYkwyKIAhEJQcdN03XMfUgXhL5r6Uw/viewform?embedded=true">
         </iframe>
