--- a/otoiawase.html
+++ b/otoiawase.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お問い合わせフォーム</title>
-    <link rel="stylesheet" href="osusume_area.css">
-    <style>
-        iframe {
-            width: 100%;
-            height: 600px;
-            border: none;
-            border-radius: 8px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .form-wrapper {
-            max-width: 800px;
-            margin: auto;
-            background-color: #e7f3e7;
-            padding: 20px;
-            border: 2px solid #2c5f2d;
-            border-radius: 8px;
-            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .form-header {
-            color: #2c5f2d;
-            text-align: left;
-            margin-bottom: 10px;
-            border-bottom: 2px solid #2c5f2d;
-            padding-bottom: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="otoiawase.css">
 </head>
 <body>
     <div class="form-wrapper">
