--- a/osusume_area.html
+++ b/osusume_area.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="osusume_area.css">
 </head>
 <body>
-    <h1>おすすめエリア</h1>
+    <h1>【東京23区】地震に強い住所表</h1>
+    <h2>【危険度・家賃から見る】おすすめエリア</h2>
 
     <nav>
         <ul class="menu">
