--- a/otoiawase.html
+++ b/otoiawase.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="otoiawase.css">
 </head>
 <body>
-    <h1 class="form-header">お問い合わせフォーム</h1>
+    <h1>【東京23区】地震に強い住所表</h1>
+    <h2>お問い合わせフォーム</h2>
     <nav>
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
