--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
     <script>
         // CSVファイルを読み込む関数
-        async function loadCSV(file) {
+        await function loadCSV(file) {
             const response = await fetch(file);
             const data = await response.text();
             return data;
         }
 
         // CSVデータを解析し、HTMLテーブルに変換する関数
-        async function parseCSV(data) {
+        await function parseCSV(data) {
             const rows = data.split('\n');
             const headers = rows[0].split(',');
 
@@ -88,7 +88,7 @@
         }
 
         // CSVファイルを表示する関数
-        async function displayCSVFiles() {
+        await function displayCSVFiles() {
             const csvFiles = ["地域危険度一覧表.csv"]; // フォルダ内のCSVファイル名をここに列挙
             const container = document.getElementById('tables');
             const columnsContainer = document.getElementById('columns-container');
