--- a/osusume_area.html
+++ b/osusume_area.html
@@ -603,5 +603,49 @@
         <p><strong>行船公園</strong>が近くにあり、自然を感じながらリラックスできるスポットとして人気があります。</p>
     </div>
 
+    <div class="section-box">
+        <h2 id="koto">江東区</h2>
+        <p><strong>江東区</strong>は台地の地盤がないですが、その中でも比較的危険度が低く、家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>江東区</td><td>東陽2丁目</td><td>沖積低地4</td><td>1</td><td>東陽町</td><td>東京メトロ東西線</td><td>12.1</td></tr>
+                    <tr><td>江東区</td><td>東陽4丁目</td><td>沖積低地4</td><td>1</td><td>東陽町</td><td>東京メトロ東西線</td><td>12.1</td></tr>
+                    <tr><td>江東区</td><td>東陽6丁目</td><td>沖積低地4</td><td>1</td><td>東陽町</td><td>東京メトロ東西線</td><td>12.1</td></tr>
+                    <tr><td>江東区</td><td>東陽7丁目</td><td>沖積低地4</td><td>1</td><td>東陽町</td><td>東京メトロ東西線</td><td>12.1</td></tr>
+                    <tr><td>江東区</td><td>塩浜2丁目</td><td>沖積低地4</td><td>1</td><td>潮見</td><td>JR京葉線</td><td>12.2</td></tr>
+                    <tr><td>江東区</td><td>新砂1丁目</td><td>沖積低地4</td><td>1</td><td>潮見</td><td>JR京葉線</td><td>12.2</td></tr>
+                    <tr><td>江東区</td><td>木場1丁目</td><td>沖積低地4</td><td>1</td><td>木場</td><td>東京メトロ東西線</td><td>12.6</td></tr>
+                    <tr><td>江東区</td><td>木場4丁目</td><td>沖積低地4</td><td>1</td><td>木場</td><td>東京メトロ東西線</td><td>12.6</td></tr>
+                    <tr><td>江東区</td><td>越中島1丁目</td><td>沖積低地4</td><td>1</td><td>門前仲町 越中島</td><td>JR京葉線 東京メトロ東西線 都営大江戸線</td><td>14.5</td></tr>
+                    <tr><td>江東区</td><td>越中島3丁目</td><td>沖積低地4</td><td>1</td><td>越中島</td><td>JR京葉線</td><td></td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>東陽2丁目</strong>・<strong>東陽4丁目</strong>・<strong>東陽6丁目</strong>・<strong>東陽7丁目</strong>は、<strong>東陽町駅</strong>が利用できる便利なエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>東陽エリア</strong>は、比較的落ち着いた住宅街が広がっており、治安も良好です。ファミリー層にも人気があります。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>東京メトロ東西線 東陽町駅</strong>を利用でき、<strong>大手町</strong>・<strong>日本橋</strong>・<strong>高田馬場</strong>など都心主要エリアへのアクセスが良好です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>西友</strong>・<strong>サミット</strong>などのスーパーや<strong>マツモトキヨシ</strong>・<strong>クリエイトS・D</strong>などのドラッグストアが充実しており、日常の買い物が便利です。また、飲食店も多く外食にも困りません。</p>
+        <h3>飲食環境</h3>
+        <p>和洋中の多様な飲食店が揃っており、カフェやレストランも多く、外食の選択肢が豊富です。</p>
+        <h3>自然環境</h3>
+        <p><strong>木場公園</strong>が近くにあり、広大な緑地で散策やピクニック、スポーツを楽しむことができます。</p>
+    </div>
+
 </body>
 </html>
