--- a/osusume_area.html
+++ b/osusume_area.html
@@ -35,6 +35,8 @@
         <li><a href="#suginami">杉並区</a></li>
         <li><a href="#itabashi">板橋区</a></li>
         <li><a href="#edogawa">江戸川区</a></li>
+        <li><a href="#koto">江東区</a></li>
+        <li><a href="#shibuya">渋谷区</a></li>
     </ul>
 
     <div class="section-box">
@@ -646,6 +648,49 @@
         <h3>自然環境</h3>
         <p><strong>木場公園</strong>が近くにあり、広大な緑地で散策やピクニック、スポーツを楽しむことができます。</p>
     </div>
+
+    <div class="section-box">
+        <h2 id="shibuya">渋谷区</h2>
+        <p><strong>渋谷区</strong>は全体的に家賃が高いですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>渋谷区</td><td>大山町</td><td>台地2</td><td>1</td><td>代々木上原 東北沢</td><td>東京メトロ千代田線 小田急小田原線</td><td>16.9</td></tr>
+                    <tr><td>渋谷区</td><td>千駄ヶ谷6丁目</td><td>台地2</td><td>1</td><td>千駄ケ谷 新宿御苑前 代々木</td><td>JR山手線 都営大江戸線 JR総武線 JR中央線 東京メトロ丸ノ内線</td><td>18.5</td></tr>
+                    <tr><td>渋谷区</td><td>千駄ヶ谷5丁目</td><td>台地2</td><td>1</td><td>代々木 南新宿 新宿</td><td>JR山手線 小田急小田原線 都営新宿線 JR総武線 JR中央線 都営大江戸線</td><td>18.6</td></tr>
+                    <tr><td>渋谷区</td><td>松濤2丁目</td><td>台地2</td><td>1</td><td>神泉 駒場東大前</td><td>京王井の頭線</td><td>18.8</td></tr>
+                    <tr><td>渋谷区</td><td>代々木2丁目</td><td>台地2</td><td>1</td><td>新宿 南新宿 新線新宿</td><td>都営新宿線 小田急小田原線 京王新線 都営大江戸線</td><td>18.8</td></tr>
+                    <tr><td>渋谷区</td><td>神山町</td><td>台地2</td><td>1</td><td>代々木八幡 神泉 代々木公園</td><td>京王井の頭線 東京メトロ千代田線 小田急小田原線</td><td>18.9</td></tr>
+                    <tr><td>渋谷区</td><td>千駄ヶ谷4丁目</td><td>台地2</td><td>1</td><td>千駄ケ谷 代々木 北参道</td><td>JR山手線 JR総武線 東京メトロ副都心線 JR中央線 都営大江戸線</td><td>19.1</td></tr>
+                    <tr><td>渋谷区</td><td>千駄ヶ谷1丁目</td><td>台地2</td><td>1</td><td>千駄ケ谷 北参道 国立競技場</td><td>JR総武線 東京メトロ副都心線 都営大江戸線 JR中央線</td><td>19.5</td></tr>
+                    <tr><td>渋谷区</td><td>千駄ヶ谷2丁目</td><td>台地2</td><td>1</td><td>千駄ケ谷 北参道 国立競技場</td><td>JR総武線 JR中央線 東京メトロ副都心線 都営大江戸線</td><td>19.5</td></tr>
+                    <tr><td>渋谷区</td><td>恵比寿南3丁目</td><td>台地2</td><td>1</td><td>中目黒 代官山 恵比寿</td><td>JR山手線 東急東横線 JR埼京線 東京メトロ日比谷線 相鉄・JR直通線 JR湘南新宿ライン</td><td>20.0</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>大山町</strong>は、<strong>代々木上原駅</strong>・<strong>東北沢駅</strong>が徒歩圏内の利便性が高いエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p>高級住宅街として知られており、落ち着いた住環境と治安の良さが特徴です。教育機関や公園も多く、ファミリー層にも人気です。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>東京メトロ千代田線</strong>や<strong>小田急小田原線</strong>を利用すれば、<strong>表参道</strong>・<strong>大手町</strong>・<strong>新宿</strong>など主要エリアに直通でアクセス可能です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>代々木上原駅周辺</strong>には<strong>Odakyu OX</strong>・<strong>マルエツ</strong>などのスーパーや商店街があり、日常の買い物にも便利です。</p>
+        <h3>飲食環境</h3>
+        <p><strong>代々木上原駅周辺</strong>には、おしゃれなカフェやベーカリー、レストランが点在し、グルメな人にもおすすめです。</p>
+        <h3>自然環境</h3>
+        <p><strong>代々木大山公園</strong>や<strong>代々木公園</strong>が近く、自然を感じながらリフレッシュできる環境です。</p>
 
 </body>
 </html>
