--- a/osusume_area.html
+++ b/osusume_area.html
@@ -686,11 +686,56 @@
         <h3>交通アクセス</h3>
         <p><strong>東京メトロ千代田線</strong>や<strong>小田急小田原線</strong>を利用すれば、<strong>表参道</strong>・<strong>大手町</strong>・<strong>新宿</strong>など主要エリアに直通でアクセス可能です。</p>
         <h3>買い物環境</h3>
-        <p><strong>代々木上原駅周辺</strong>には<strong>Odakyu OX</strong>・<strong>マルエツ</strong>などのスーパーや商店街があり、日常の買い物にも便利です。</p>
+        <p><strong>代々木上原駅周辺</strong>には<strong>Odakyu OX</strong>・<strong>マルエツ</strong>などのスーパー、<strong>スギ薬局</strong>・<strong>トモズ</strong>・<strong>ココカラファイン</strong>などのドラッグストアや商店街があり、日常の買い物にも便利です。</p>
         <h3>飲食環境</h3>
         <p><strong>代々木上原駅周辺</strong>には、おしゃれなカフェやベーカリー、レストランが点在し、グルメな人にもおすすめです。</p>
         <h3>自然環境</h3>
         <p><strong>代々木大山公園</strong>や<strong>代々木公園</strong>が近く、自然を感じながらリフレッシュできる環境です。</p>
+    </div>
+
+    <div class="section-box">
+        <h2 id="minato">港区</h2>
+        <p><strong>港区</strong>は全体的に家賃が高いですが、その中でも危険度が低く、比較的家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア一覧</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>港区</td><td>高輪4丁目</td><td>台地2</td><td>1</td><td>北品川 品川 高輪台</td><td>東海道新幹線 JR山手線 京浜急行本線 JR京浜東北線 JR上野東京ライン JR横須賀線 都営浅草線 JR東海道本線</td><td>17.9</td></tr>
+                    <tr><td>港区</td><td>高輪3丁目</td><td>台地2</td><td>1</td><td>高輪ゲートウェイ 品川 高輪台</td><td>東海道新幹線 JR山手線 京浜急行本線 JR京浜東北線 JR上野東京ライン JR横須賀線 都営浅草線 JR東海道本線</td><td>18.9</td></tr>
+                    <tr><td>港区</td><td>白金台5丁目</td><td>台地2</td><td>1</td><td>白金台 目黒</td><td>都営三田線 JR山手線 東京メトロ南北線 東急目黒線</td><td>19.1</td></tr>
+                    <tr><td>港区</td><td>白金台1丁目</td><td>台地2</td><td>1</td><td>白金台 白金高輪 高輪台</td><td>都営三田線 都営浅草線 東京メトロ南北線</td><td>19.3</td></tr>
+                    <tr><td>港区</td><td>白金2丁目</td><td>台地2</td><td>1</td><td>白金台 白金高輪</td><td>都営三田線 東京メトロ南北線</td><td>19.4</td></tr>
+                    <tr><td>港区</td><td>白金4丁目</td><td>台地2</td><td>1</td><td>白金台 白金高輪</td><td>都営三田線 東京メトロ南北線</td><td>19.4</td></tr>
+                    <tr><td>港区</td><td>三田4丁目</td><td>台地2</td><td>1</td><td>田町 白金高輪 泉岳寺</td><td>都営三田線 JR山手線 東京メトロ南北線 京浜急行本線 JR京浜東北線 都営浅草線</td><td>19.4</td></tr>
+                    <tr><td>港区</td><td>三田1丁目</td><td>台地2</td><td>1</td><td>赤羽橋 芝公園 麻布十番</td><td>都営三田線 東京メトロ南北線 都営大江戸線</td><td>20.3</td></tr>
+                    <tr><td>港区</td><td>三田2丁目</td><td>台地2</td><td>1</td><td>赤羽橋 三田 麻布十番</td><td>都営三田線 都営浅草線 東京メトロ南北線 都営大江戸線</td><td>20.4</td></tr>
+                    <tr><td>港区</td><td>西麻布4丁目</td><td>台地2</td><td>1</td><td>広尾</td><td>東京メトロ日比谷線</td><td>20.9</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>高輪3丁目</strong>・<strong>高輪4丁目</strong>は、複数路線が利用できるアクセスの良さと、落ち着いた住環境が魅力のエリアです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>品川駅</strong>や<strong>高輪台駅周辺</strong>は、オフィス街に近接しつつも閑静な住宅街が広がり、治安も良好です。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>JR山手線</strong>・<strong>京浜急行本線</strong>・<strong>都営浅草線</strong>など複数路線が利用可能で、<strong>品川</strong>・<strong>新橋</strong>・<strong>東京駅</strong>など主要エリアへのアクセスが抜群です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>京急ストア</strong>などのスーパー、<strong>ツルハドラッグ</strong>などのドラッグストアがあります。また、<strong>品川駅周辺</strong>には<strong>ウィング高輪</strong>・<strong>アトレ品川</strong>などの大型商業施設、飲食店が充実しており、日常の買い物からショッピングまで便利です。</p>
+        <h3>飲食環境</h3>
+        <p>周辺には和食・洋食・カフェなど多彩な飲食店があり、外食にも困りません。</p>
+        <h3>自然環境</h3>
+        <p><strong>高輪台駅周辺</strong>は緑も多く、少し足を伸ばせば<strong>高輪森の公園</strong>や<strong>御殿山庭園</strong>など自然豊かなスポットもあります。</p>
+    </div>
 
 </body>
 </html>
