--- a/osusume_area.html
+++ b/osusume_area.html
@@ -848,8 +848,8 @@
                 </thead>
                 <tbody>
                     <tr><td>荒川区</td><td>荒川8丁目</td><td>沖積低地4</td><td>1</td><td>荒川二丁目 荒川七丁目 町屋</td><td>京成本線 都電荒川線</td><td>11.3</td></tr>
-                    <tr><td>荒川区</td><td>南千住4丁目</td><td>沖積低地4</td><td>1</td><td>南千住</td><td>JR常磐線快速 東京メトロ日比谷線 つくばエクスプレス線</td><td>12.5</td></tr>
                     <tr><td>荒川区</td><td>南千住8丁目</td><td>沖積低地4</td><td>1</td><td>京成関屋（徒歩10分圏外）</td><td>京成本線</td><td>11.4</td></tr>
+                    <tr><td>荒川区</td><td>南千住4丁目</td><td>沖積低地4</td><td>1</td><td>南千住</td><td>JR常磐線快速 東京メトロ日比谷線 つくばエクスプレス線</td><td>12.5</td></tr>
                 </tbody>
             </table>
         </details>
@@ -864,6 +864,45 @@
         <p>昔ながらの飲食店からカフェまでバリエーション豊かで、外食にも困りません。</p>
         <h3>自然環境</h3>
         <p><strong>荒川自然公園</strong>や<strong>隅田川沿いの遊歩道</strong>など、自然を感じられるスポットもあり、散歩やジョギングに適しています。</p>
+    </div>
+
+    <div class="section-box">
+        <h2 id="katsushika">葛飾区</h2>
+        <p><strong>葛飾区</strong>は台地の地盤がないですが、その中でも比較的危険度が低く、家賃が安めのエリアをピックアップしました。</p>
+        <details>
+            <summary>おすすめエリア</summary>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>区</th>
+                        <th>町</th>
+                        <th>地盤</th>
+                        <th>総合危険度</th>
+                        <th>駅</th>
+                        <th>路線</th>
+                        <th>家賃(万円)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>葛飾区</td><td>新宿6丁目</td><td>沖積低地5</td><td>1</td><td>金町（徒歩10分圏外）</td><td>JR常磐線各駅停車</td><td>8.0</td></tr>
+                    <tr><td>葛飾区</td><td>南水元3丁目</td><td>沖積低地4</td><td>1</td><td>金町（徒歩10分圏外）</td><td>JR常磐線各駅停車</td><td>8.0</td></tr>
+                    <tr><td>葛飾区</td><td>高砂4丁目</td><td>沖積低地4</td><td>1</td><td>新柴又 京成高砂</td><td>京成成田空港線 京成本線 京成金町線 北総鉄道 京成押上線</td><td>8.2</td></tr>
+                    <tr><td>葛飾区</td><td>西新小岩1丁目</td><td>沖積低地5</td><td>1</td><td>新小岩</td><td>JR総武線快速 JR総武線</td><td>8.7</td></tr>
+                    <tr><td>葛飾区</td><td>西新小岩2丁目</td><td>沖積低地5</td><td>1</td><td>新小岩</td><td>JR総武線快速 JR総武線</td><td>8.7</td></tr>
+                </tbody>
+            </table>
+        </details>
+        <p>中でも<strong>西新小岩1丁目</strong>・<strong>西新小岩2丁目</strong>は、<strong>新小岩駅</strong>から近く、利便性の高いエリアとしておすすめです。</p>
+        <h3>治安の良さ</h3>
+        <p><strong>西新小岩</strong>は比較的静かな住宅街が多く、ファミリー層にも人気のエリアです。</p>
+        <h3>交通アクセス</h3>
+        <p><strong>新小岩駅</strong>からは<strong>JR総武線快速</strong>や各駅停車を利用でき、<strong>東京駅</strong>や<strong>秋葉原駅</strong>などの都心部へダイレクトアクセスが可能です。</p>
+        <h3>買い物環境</h3>
+        <p><strong>業務スーパー</strong>・<strong>サミット</strong>・<strong>美味スーパー</strong>などのスーパーや<strong>ぱぱす</strong>・<strong>ココカラファイン</strong>・<strong>ミネドラッグ</strong>などのドラッグストアがあります。<strong>新小岩駅周辺</strong>には<strong>クッターナ新小岩</strong>・<strong>シャポー新小岩</strong>などの商業施設や商店街が充実しており、生活に必要な施設が揃っています。</p>
+        <h3>飲食環境</h3>
+        <p><strong>新小岩駅周辺</strong>には、飲食店やカフェ、居酒屋など多彩なグルメスポットが集まっています。</p>
+        <h3>自然環境</h3>
+        <p>近隣には<strong>新小岩公園</strong>などの自然スポットもあり、散策やリフレッシュに適した環境です。</p>
     </div>
 
 </body>
