--- a/osusume_area.html
+++ b/osusume_area.html
@@ -48,7 +48,7 @@
 
     <div class="section-box">
         <h2 id="setagaya">世田谷区</h2>
-        <p><strong>世田谷区</strong>の中でも、地震危険度が低く、地盤が固い地域（地盤分類が台地1）のうち、家賃相場が比較的低いエリアをピックアップしました。</p>
+        <p><strong>世田谷区</strong>の中でも比較的安全性が高く、家賃も手ごろなエリアをピックアップしました。</p>
         <details>
             <summary>おすすめエリア</summary>
             <table border="1">
@@ -64,30 +64,30 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr><td>世田谷区</td><td>上祖師谷４丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
-                    <tr><td>世田谷区</td><td>給田５丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
-                    <tr><td>世田谷区</td><td>北烏山２丁目</td><td>台地1</td><td>1</td><td>富士見ヶ丘（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
-                    <tr><td>世田谷区</td><td>北烏山５丁目</td><td>台地1</td><td>1</td><td>久我山（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
-                    <tr><td>世田谷区</td><td>喜多見８丁目</td><td>台地1</td><td>1</td><td>喜多見</td><td>小田急小田原線</td><td>11.5</td></tr>
-                    <tr><td>世田谷区</td><td>千歳台６丁目</td><td>台地1</td><td>1</td><td>千歳烏山（徒歩10分圏外）</td><td>京王線</td><td>11.6</td></tr>
-                    <tr><td>世田谷区</td><td>南烏山６丁目</td><td>台地1</td><td>1</td><td>千歳烏山</td><td>京王線</td><td>11.6</td></tr>
-                    <tr><td>世田谷区</td><td>南烏山２丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園・千歳烏山</td><td>京王線</td><td>12.0</td></tr>
-                    <tr><td>世田谷区</td><td>粕谷２丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園</td><td>京王線</td><td>12.1</td></tr>
-                    <tr><td>世田谷区</td><td>八幡山２丁目</td><td>台地1</td><td>1</td><td>八幡山（徒歩10分圏外）</td><td>京王線</td><td>12.2</td></tr>
+                    <tr><td>世田谷区</td><td>上祖師谷4丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
+                    <tr><td>世田谷区</td><td>給田5丁目</td><td>台地1</td><td>1</td><td>仙川（徒歩10分圏外）</td><td>京王線</td><td>10.9</td></tr>
+                    <tr><td>世田谷区</td><td>北烏山2丁目</td><td>台地1</td><td>1</td><td>富士見ヶ丘（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
+                    <tr><td>世田谷区</td><td>北烏山5丁目</td><td>台地1</td><td>1</td><td>久我山（徒歩10分圏外）</td><td>京王井の頭線</td><td>11.5</td></tr>
+                    <tr><td>世田谷区</td><td>喜多見8丁目</td><td>台地1</td><td>1</td><td>喜多見</td><td>小田急小田原線</td><td>11.5</td></tr>
+                    <tr><td>世田谷区</td><td>千歳台6丁目</td><td>台地1</td><td>1</td><td>千歳烏山（徒歩10分圏外）</td><td>京王線</td><td>11.6</td></tr>
+                    <tr><td>世田谷区</td><td>南烏山6丁目</td><td>台地1</td><td>1</td><td>千歳烏山</td><td>京王線</td><td>11.6</td></tr>
+                    <tr><td>世田谷区</td><td>南烏山2丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園・千歳烏山</td><td>京王線</td><td>12.0</td></tr>
+                    <tr><td>世田谷区</td><td>粕谷2丁目</td><td>台地1</td><td>1</td><td>八幡山・芦花公園</td><td>京王線</td><td>12.1</td></tr>
+                    <tr><td>世田谷区</td><td>八幡山2丁目</td><td>台地1</td><td>1</td><td>八幡山（徒歩10分圏外）</td><td>京王線</td><td>12.2</td></tr>
                 </tbody>
             </table>
         </details>
-        <p>特に<strong>南烏山６丁目</strong>・<strong>南烏山２丁目</strong>・<strong>粕谷２丁目</strong>付近は、<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>の3駅にアクセスしやすく、利便性が高いエリアです。</p>
+        <p>中でも<strong>南烏山2丁目</strong>は、利便性と住環境のバランスが取れた人気エリアです。</p>
         <h3>治安の良さ</h3>
-        <p><strong>南烏山エリア</strong>は、犯罪発生率が低く、比較的治安が良い地域として知られています。落ち着いた住宅街が広がり、ファミリー層や女性の一人暮らしにも適しています。</p>
+        <p><strong>南烏山2丁目</strong>は、閑静な住宅街で、落ち着いた街並みが広がり、治安も良好です。</p>
         <h3>交通アクセス</h3>
-        <p><strong>京王線</strong>の<strong>千歳烏山駅</strong>・<strong>芦花公園駅</strong>・<strong>八幡山駅</strong>が利用可能で、<strong>新宿</strong>まで約15分と都心へのアクセスが良好です。通勤・通学に便利なエリアです。</p>
+        <p><strong>京王線</strong>の<strong>八幡山</strong>・<strong>芦花公園</strong>・<strong>千歳烏山</strong>の3駅が徒歩圏内で、<strong>新宿方面</strong>へのアクセスも良好です。</p>
         <h3>買い物環境</h3>
-        <p>駅周辺にはスーパーや商店街があり、日用品の買い物には困りません。特に<strong>千歳烏山駅周辺</strong>は夜遅くまで営業している店舗も多く、利便性が高いです。</p>
+        <p>スーパーは<strong>成城石井</strong>・<strong>サミット</strong>など、ドラッグストアは<strong>ヘルスケアセイジョー</strong>などがあり、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
-        <p>商店街にはリーズナブルな飲食店が充実しており、外食にも困りません。<strong>千歳烏山駅周辺</strong>はカフェやレストランの選択肢も豊富です。</p>
+        <p><strong>千歳烏山駅前</strong>を中心に、カフェやレストラン、居酒屋などバラエティ豊かな飲食店が点在しています。</p>
         <h3>自然環境</h3>
-        <p><strong>芦花恒春園</strong>が近く、自然を楽しめる環境が整っています。散歩やジョギングにも適しており、リラックスできる空間です。</p>
+        <p>近隣には<strong>蘆花恒春園</strong>などの大きな公園もあり、自然を身近に感じることができます。</p>
     </div>
 
     <div class="section-box">
@@ -127,7 +127,7 @@
         <h3>交通アクセス</h3>
         <p><strong>東京メトロ日比谷線・東西線 茅場町駅</strong>や<strong>都営浅草線 日本橋駅</strong>が利用でき、<strong>東京駅</strong>や<strong>銀座</strong>、<strong>新宿</strong>など主要エリアへのアクセスが非常に便利です。</p>
         <h3>買い物環境</h3>
-        <p>スーパーは<strong>まいばすけっと</strong>・<strong>マルエツプチ</strong>など、ドラッグストアは<strong>トモズ</strong>・<strong>マツモトキヨシ</strong>などが点在しており、日用品の購入に困ることはありません。</p>
+        <p>スーパーは<strong>まいばすけっと</strong>・<strong>マルエツプチ</strong>など、ドラッグストアは<strong>トモズ</strong>・<strong>マツモトキヨシ</strong>などがあり、日用品の購入に困ることはありません。</p>
         <h3>飲食環境</h3>
         <p>オフィスワーカー向けの飲食店が豊富で、ランチやディナーの選択肢が多いエリアです。特に<strong>人形町エリア</strong>には老舗の和食店も多く、グルメも楽しめます。</p>
         <h3>自然環境</h3>
@@ -444,7 +444,7 @@
         <h3>交通アクセス</h3>
         <p><strong>JR山手線 駒込駅</strong>、<strong>都営三田線 千石駅</strong>、<strong>東京メトロ南北線 駒込駅</strong>が利用でき、都心へのアクセスも良好です。</p>
         <h3>買い物環境</h3>
-        <p><strong>サミット</strong>・<strong>ピーコック</strong>などのスーパーや、<strong>サンドラッグ</strong>・<strong>ユニバーサルドラッグ</strong>・<strong>ウエルシア</strong>などのドラッグストアが点在し、日常の買い物には困りません。また、近隣の<strong>巣鴨エリア</strong>には商店街もあり、多様な買い物が楽しめます。</p>
+        <p><strong>サミット</strong>・<strong>ピーコック</strong>などのスーパーや、<strong>サンドラッグ</strong>・<strong>ユニバーサルドラッグ</strong>・<strong>ウエルシア</strong>などのドラッグストアがあり、日常の買い物には困りません。また、近隣の<strong>巣鴨エリア</strong>には商店街もあり、多様な買い物が楽しめます。</p>
         <h3>飲食環境</h3>
         <p>駅周辺には飲食店が揃っており、カフェやレストラン、昔ながらの定食屋もあります。特に<strong>駒込エリア</strong>には和食店が充実しています。</p>
         <h3>自然環境</h3>
@@ -522,7 +522,7 @@
         <h3>交通アクセス</h3>
         <p><strong>西武新宿線 井荻駅</strong>・<strong>上井草駅</strong>が利用でき、<strong>新宿駅</strong>へのアクセスも便利です。通勤や通学にも適したエリアです。</p>
         <h3>買い物環境</h3>
-        <p><strong>サミット</strong>・<strong>コープみらい</strong>などのスーパーや、<strong>ココカラファイン</strong>・<strong>ウエルシア</strong>などのドラッグストアが点在しており、日常の買い物には困りません。さらに、少し足を伸ばせば<strong>荻窪エリア</strong>にもアクセスできます。</p>
+        <p><strong>サミット</strong>・<strong>コープみらい</strong>などのスーパーや、<strong>ココカラファイン</strong>・<strong>ウエルシア</strong>などのドラッグストアがあり、日常の買い物には困りません。さらに、少し足を伸ばせば<strong>荻窪エリア</strong>にもアクセスできます。</p>
         <h3>飲食環境</h3>
         <p><strong>井草エリア</strong>は静かな住宅街のため、飲食店は少なめですが、<strong>井荻駅周辺</strong>にはカフェやローカルな飲食店が点在しています。</p>
         <h3>自然環境</h3>
