--- a/osusume_area.html
+++ b/osusume_area.html
@@ -286,7 +286,7 @@
         <h3>交通アクセス</h3>
         <p><strong>JR山手線 鶯谷駅</strong>や<strong>日暮里駅</strong>が利用でき、都内主要エリアへのアクセスが良好です。<strong>京成本線</strong>や<strong>JR上野東京ライン</strong>も利用可能で、利便性が高いです。</p>
         <h3>買い物環境</h3>
-        <p>周辺にはスーパーやがあまりないのが難点ですが、北方面に進み線路を超えると<strong>業務スーパー</strong>・<strong>ライフ</strong>・<strong>マルエツプチ</strong>・<strong>まいばすけっと</strong>などが点在しています。また、<strong>上野方面</strong>へ出ればデパートや商業施設も充実しています。</p>
+        <p>周辺にはスーパーがあまりないのが難点ですが、北方面に進み線路を超えると<strong>業務スーパー</strong>・<strong>ライフ</strong>・<strong>マルエツプチ</strong>・<strong>まいばすけっと</strong>などが点在しています。また、<strong>上野方面</strong>へ出ればデパートや商業施設も充実しています。</p>
         <h3>飲食環境</h3>
         <p><strong>上野</strong>や<strong>谷根千エリア</strong>が近いため、多彩な飲食店が揃っています。カフェや老舗の和食店も多く、食文化を楽しめる環境です。</p>
         <h3>自然環境</h3>
