--- a/osusume_area.html
+++ b/osusume_area.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>おすすめエリア</title>
+    <title>【危険度・家賃から見る】おすすめエリア</title>
     <link rel="stylesheet" href="osusume_area.css">
 </head>
 <body>
@@ -14,6 +14,7 @@
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
             <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+            <li><a href="privacy_policy.html">プライバシーポリシー</a></li>
             <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
     </nav>
