--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
             <li><a href="osusume_area.html">【危険度・家賃から見る】おすすめエリア</a></li>
+            <li><a href="privacy_policy.html">プライバシーポリシー</a></li>
             <li><a href="otoiawase.html">お問合せ</a></li>
         </ul>
     </nav>
     <ul>
-        <li>出典: <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
+        <li>地震危険度の出典: <cite><a href="https://www.funenka.metro.tokyo.lg.jp/area-hazard-level/regional-risk-list/">東京都不燃化ポータルサイト 地域危険度一覧表</a></cite></li>
         <li>数字が小さい（1に近い）ほど危険度が低く、数字が大きい（5に近い）ほど危険度が高いです。</li>
+        <li>家賃の出典: <cite><a href="https://suumo.jp/chintai/soba/tokyo/ensen/">SUUMO 東京都の路線・沿線から家賃相場・賃料相場情報を探す</a></cite></li>
+        <li>家賃は SUUMO の駅ごとの家賃相場を参考に計算しています。</li>
     </ul>
     <div class="option_box">
         <h3>列フィルター</h3>
