--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/select/1.3.3/js/dataTables.select.min.js"></script>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XC4BSW2LLQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XC4BSW2LLQ');
+</script>
 <body>
     <h1>【東京23区】地震に強い住所表</h1>
     <nav>
