--- a/otoiawase.html
+++ b/otoiawase.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お問い合わせフォーム</title>
     <link rel="stylesheet" href="otoiawase.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XC4BSW2LLQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-XC4BSW2LLQ');
+    </script>
 </head>
 <body>
     <h1>【東京23区】地震に強い住所表</h1>
