--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
     <!-- 別のCSSファイルをリンク -->
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XC4BSW2LLQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-XC4BSW2LLQ');
+    </script>
 </head>
 
 <body>
