--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>【東京23区】地震に強い住所表【地盤・危険度・最寄り駅・家賃から見る】</title>
+    <title>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</title>
 
     <!-- DataTables & Extensions CSS -->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <h1>【東京23区】地震に強い住所表</h1>
+    <h1>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
     <nav>
         <ul class="menu">
             <li><a href="index.html">危険度表</a></li>
