--- a/osusume_area.html
+++ b/osusume_area.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 <body>
-    <h1>【東京23区】地震に強い住所表</h1>
+    <h1>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
     <h2>【危険度・家賃から見る】おすすめエリア</h2>
 
     <nav>
