--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 <body>
-    <h1>【東京23区】地震に強い住所表</h1>
+    <h1>東京23区の地震に強い街を徹底比較｜家賃・駅情報付きで安心のエリア探し</h1>
     <h2>プライバシーポリシー</h2>
     <nav>
       <ul class="menu">
