--- a/index.html
+++ b/index.html
@@ -340,6 +340,38 @@
 
         displayCSVFiles();
     </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "中央区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "日本橋小網町は、都心の利便性を活かしながら住めるエリアとしておすすめです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "千代田区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "神田駿河台と神田猿楽町は、交通利便性が高く、周辺に大学や文化施設が多いエリアです。"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "港区の地震に強くて家賃も抑えめのエリアは？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "高輪3丁目・高輪4丁目は、複数路線が利用できるアクセスの良さと、落ち着いた住環境が魅力のエリアです。"
+          }
+        },
+      ]
+    }
+    </script>
 
 </body>
 
